--- a/src/style/Body.css
+++ b/src/style/Body.css
@@ -20,7 +20,7 @@
   align-items: center;
 }
 .body__left {
-  flex: 0.5;
+  flex: 0.6;
   padding: 40px;
 }
 .body__left > h1 {
@@ -46,5 +46,5 @@
   height: auto;
   width: 100%;
   object-fit: contain;
-  margin-right: 30px;
+  margin-left: 20px;
 }
