--- a/src/style/Register.css
+++ b/src/style/Register.css
@@ -10,8 +10,9 @@
   width: 100%;
 }
 h1 {
-  font-size: 30px;
+  font-size: 40px;
   margin-bottom: 20px;
+  text-transform: capitalize;
 }
 .register__app > form > .form__input {
   display: flex;
@@ -33,12 +34,9 @@ form {
   padding: 10px;
   width: 90%;
 }
-.button {
-  display: flex;
-  margin-right: 20px;
-  margin-top: 5px;
-  justify-content: flex-end;
+.button > button {
+  margin-top: 10px;
 }
 .button > button {
-  margin-right: 5px;
+  margin-right: 10px;
 }
