--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,3 @@
-* {
-  margin: 0;
-}
 body {
-  font-family: "Lato", sans-serif;
-  background-color: #042b56;
-  color: #fff;
-}
-a {
-  text-decoration: none;
+  font-family: "Oswald", sans-serif;
 }
