--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -2,7 +2,7 @@
   display: flex;
   width: 100%;
   background-color: #006e9e;
-  height: 580px;
+  height: 600px;
   border-bottom: 2px solid #eff2f7;
 }
 .app__headerTop {
@@ -11,6 +11,8 @@
   align-items: center;
   margin-left: 30px;
   margin-right: 30px;
+  margin-bottom: 50px;
+  margin-top: 20px;
 }
 .app__topLeft {
   display: flex;
@@ -49,9 +51,12 @@
   display: flex;
   flex-direction: column;
   flex: 0.4;
+  margin-top: 30px;
 }
 .app__containerLeft > p {
   margin-bottom: 20px;
+  margin-top: 10px;
+  font-size: 16px;
   color: whitesmoke;
 }
 .app__containerRight {
@@ -63,7 +68,7 @@
 .app__containerRight > img {
   object-fit: contain;
   width: 100%;
-  height: 390px;
+  height: 405px;
 }
 .app__containerLeft > h1 {
   margin-bottom: 10px;
