--- a/src/style/Body.css
+++ b/src/style/Body.css
@@ -33,3 +33,18 @@
   color: #1f1f1f;
   font-weight: 300;
 }
+
+@media screen and (max-width: 900px) {
+  .app__body__container {
+    margin: 50px 30px;
+  }
+  .card {
+    display: block;
+    margin-bottom: 30px;
+  }
+  .card > img {
+    height: 300px;
+    margin-bottom: 20px;
+    object-fit: contain;
+  }
+}
