--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -89,3 +89,54 @@
 .app__containerLeft > button:hover {
   color: #333 !important;
 }
+
+@media screen and (max-width: 1000px) {
+  .app__header {
+    width: 100%;
+    height: auto;
+  }
+  .app__topLeft > h1 {
+    font-size: 2rem;
+    margin-bottom: 0px;
+  }
+  .app__topLeft {
+    margin-right: 20px;
+  }
+  .app__topLeft > p {
+    font-size: 10px;
+  }
+  .app__header__container {
+    display: block;
+  }
+  .app__containerLeft {
+    flex: 1;
+    width: 100%;
+    margin-top: 30px;
+  }
+  .app__containerRight {
+    display: none;
+  }
+  .app__containerRight > img {
+    display: none;
+  }
+  .app__containerLeft > h1 {
+    margin-bottom: 10px;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+  }
+  .app__containerLeft > p {
+    font-weight: 300;
+    line-height: 1.5rem;
+    font-size: 16px;
+  }
+  .app__containerLeft > button {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .app__topRight > h2 {
+    font-size: 12px;
+  }
+}
